--- a/AudioSwitcher/AudioSwitcher.csproj
+++ b/AudioSwitcher/AudioSwitcher.csproj
@@ -67,16 +67,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\AllocationType.cs" />
     <Compile Include="Controller.cs" />
+    <Compile Include="ControllerBase.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GlobalKeyboardHook.cs" />
-    <Compile Include="GlobalKeyboardHookEventArgsBase.cs" />
+    <Compile Include="KeyboardHook\GlobalKeyboardHook.cs" />
+    <Compile Include="KeyboardHook\GlobalKeyboardHookEventArgsBase.cs" />
     <Compile Include="AppContext.cs" />
+    <Compile Include="Enums\LVM.cs" />
+    <Compile Include="Structs\LV_ITEM.cs" />
+    <Compile Include="Enums\MemoryProtection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource1.Designer.cs">
