--- a/AudioSwitcher/AudioSwitcher.csproj
+++ b/AudioSwitcher/AudioSwitcher.csproj
@@ -82,9 +82,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration.Designer.cs">
+      <DependentUpon>Configuration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Enums\AllocationType.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="ControllerBase.cs" />
+    <Compile Include="Enums\VirtualCode.cs" />
     <Compile Include="KeyboardHook\GlobalKeyboardHook.cs" />
     <Compile Include="KeyboardHook\GlobalKeyboardHookEventArgsBase.cs" />
     <Compile Include="AppContext.cs" />
@@ -98,6 +105,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Configuration.resx">
+      <DependentUpon>Configuration.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
